--- a/W1-2/.gitignore
+++ b/W1-2/.gitignore
@@ -1,5 +1,5 @@
 node_modules
-*/.env
+.env
 coverage
 coverage.json
 typechain
@@ -7,7 +7,3 @@ typechain
 #Hardhat files
 cache
 artifacts
-*/mnemonic.txt
-
-.DS_Store
-.idea
