--- a/W1-2/package.json
+++ b/W1-2/package.json
@@ -7,7 +7,6 @@
     "chai": "^4.3.6",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.4.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
@@ -22,5 +21,7 @@
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.7.20"
   },
-  "dependencies": {}
+  "dependencies": {
+    "hardhat-deploy": "^0.10.5"
+  }
 }
