--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "antd": "^4.19.1",
+    "ethereumjs-util": "^7.1.4",
     "ethers": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
