--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -35,8 +35,9 @@
     "typescript": "^4.6.2"
   },
   "scripts": {
-    "chain": "hardhat node --network hardhat",
+    "chain": "hardhat node --network hardhat --no-deploy",
     "test": "hardhat test --network hardhat",
+    "fork": "hardhat node --no-deploy --network hardhat --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
     "compile": "hardhat compile",
     "deploy": "hardhat deploy",
     "accounts": "hardhat accounts"
